<resources>
    <string name="app_name">iCart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="make_home_beautiful"><font family="@font/poppins>">MAKE HOME</font> \n<b><big>BEAUTIFUL</big></b></string>
    <string name="cart">Cart</string>
    <string name="all">All</string>>
    <string name="bag">Bag</string>
    <string name="favorites">Favorites</string>
    <string name="add_all_to_my_cart">Add all to my cart</string>
    <string name="it_looks_like_you_don_t_have_a_favorite_yet">It looks like you don\'t have a favorite yet</string>
    <string name="enter_promo_code">Enter your promo code</string>
    <string name="total">Total</string>
    <string name="check_out">Checkout</string>
    <string name="no_items_in_the_cart">Your cart is empty!</string>
    <string name="my_cart">My Cart</string>
    <string name="_1">1</string>
    <string name="currency">\u20A6 %s</string>
    <string name="quantity_remaining">Quantity remaining: %d</string>
    <string name="decrease_button">Decrease button</string>
    <string name="increase_button">Increase button</string>
    <string name="bookmark_button">Bookmark button</string>
    <string name="product_image">Product image</string>
    <string name="text_search">Search</string>
    <string name="toggle_filter">Toggle Filter</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="remove_item_from_cart">Do you wish to remove this item from cart?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="browse_our_categories_and_discover_our_best_deals">Browse our categories and discover our best deals!</string>

</resources>